# Pixel

./: CMakeLists.txt
src/: main.cpp
src/graphics/generic/: idynamictexture.h  irenderer.h  itexture.h  iwindow.h
src/graphics/implementation/sdl2/: sdl2dynamictexture.cpp  sdl2dynamictexture.h  sdl2renderer.cpp  sdl2renderer.h  sdl2texture.cpp  sdl2texture.h  sdl2window.cpp  sdl2window.h
src/logic/: interface.h  nocopy.h  pixelassert.h
src/math/: vector2.h
